# shrdlu-block-world

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: pypi-publish.yml
shrdlu_blocks/: __init__.py  client.py
shrdlu_blocks/simulator/: __init__.py  __main__.py  control.py  demo.py  env.py  scenes.py  server.py  state_pred.py
shrdlu_blocks/viewer/: __init__.py  web.py
shrdlu_blocks/viewer/web_static/: index.html  web_viewer.css  web_viewer.js
