[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shrdlu-block-world"
version = "0.1.0"
description = "A small standalone SHRDLU blocks-world simulator."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
authors = [
    {name = "Aaron Hosford", email = "hosford42@gmail.com"},
]
keywords = ["SHRDLU", "blocks world", "simulator"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
shrdlu-block-world = "shrdlu_blocks.simulator.demo:demo"

[tool.setuptools.packages.find]
include = ["shrdlu_blocks*"]

[tool.setuptools.package-data]
"shrdlu_blocks.viewer" = [
    "web_static/*.css",
    "web_static/*.html",
    "web_static/*.js",
]
